Bug 1681800 - Don't notify of refocus when element is non focusable root. r=masayuki

It is unnecessary to notify of IME re-focus when element is root element and
not focusable.

Differential Revision: https://phabricator.services.mozilla.com/D103980